Reduce pods spec

--- a/manifests/base-application/carts/deployment.yaml
+++ b/manifests/base-application/carts/deployment.yaml
@@ -62,10 +62,10 @@ spec:
             periodSeconds: 3
           resources:
             limits:
-              memory: 1Gi
+              memory: 341Mi
             requests:
-              cpu: 250m
-              memory: 1Gi
+              cpu: 83m
+              memory: 341Mi
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
